<resources>
    <string name="app_name">Choose_Movie_For_The_Leisure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standardNumber">0</string>
    <string name="filmName">FilmName</string>
    <string name="filmPoster">filmPoster</string>
    <string name="overview">Overview</string>
    <string name="filmGenre">filmGenre</string>
</resources>